--- a/src/main/resources/application-dev3.properties
+++ b/src/main/resources/application-dev3.properties
@@ -10,3 +10,4 @@ spring.datasource.password=abcd1234
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
