--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,11 @@
 		</dependency>
 
 		<!-- Autenticación -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 			<version>2.7.4</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
