--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,11 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
 		<!-- Autenticación -->
 		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
